关闭设置家校圈权限

--- a/JiaoBaoYun-hb/html/quan/group-pInfo.html
+++ b/JiaoBaoYun-hb/html/quan/group-pInfo.html
@@ -42,11 +42,11 @@
 						<span id="person-remark" class="mui-badge person-space">数字</span>
 					</a>
 				</li>
-				<li class="mui-table-view-cell">
+				<!--<li class="mui-table-view-cell">
 					<a class="mui-navigate-right">
 						设置家校圈权限
 					</a>
-				</li>
+				</li>-->
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right">
 							<p class="info-remark">地区</p>
