--- a/JiaoBaoYun-hb/html/cloud/record_student_main.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_main.html
@@ -16,8 +16,8 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 id="title" class="mui-title" style="text-align: left;"></h1>
-			<a id="add" class="mui-icon mui-icon-plus mui-pull-right"></a>
+			<h1 id="title" class="mui-title" style="text-align: left;color: white;"></h1>
+			<h1 id="add" class="mui-title" style="text-align: right;right: 10px;">添加</h1>
 		</header>
 		<div class="mui-content"></div>
 	</body>
