--- a/JiaoBaoYun-hb/html/mine/qun_manage_1.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_1.html
@@ -85,20 +85,24 @@
 					<div style="height: 40px;line-height: 40px;">
 						选择身份:
 					</div>
-					<div style="height: 45px;line-height: 45px;">
-						<div class="mui-input-row mui-checkbox mui-left" style="left: 0%;">
-							<label>家长</label>
+					<li style="height: 45px;line-height: 45px;">
+						<div class="mui-input-row mui-checkbox mui-left">
+							<label id="parents_la" class="mui-ellipsis" style="text-align: left;">家长</label>
 							<input id="parents" name="Checkbox" type="checkbox" checked>
 						</div>
-						<div class="mui-input-row mui-checkbox mui-left" style="left: 30%;">
-							<label>老师</label>
+					</li>
+					<li style="height: 45px;line-height: 45px;">
+						<div class="mui-input-row mui-checkbox mui-left">
+							<label id="teacher_la" class="mui-ellipsis" style="text-align: left;">老师</label>
 							<input id="teacher" name="Checkbox" type="checkbox">
 						</div>
-						<div class="mui-input-row mui-checkbox mui-left" style="left: 60%;">
-							<label>学生</label>
+					</li>
+					<li style="height: 45px;line-height: 45px;">
+						<div class="mui-input-row mui-checkbox mui-left">
+							<label id="student_la" class="mui-ellipsis" style="text-align: left;">学生</label>
 							<input id="student" name="Checkbox" type="checkbox">
 						</div>
-					</div>
+					</li>
 					<li class="popover-button">
 						<button id="commit" type="button" class="mui-btn mui-btn-blue">确定</button>
 						<button id="cancle" type="button" class="mui-btn mui-btn-blue mui-btn-outlined">取消</button>
@@ -137,6 +141,9 @@
 					link.href = "../../css/mine/manager_member.css";
 					document.getElementById("title").innerText = '群管理';
 					document.getElementById("slider_group").style.textAlign = 'center';
+					document.getElementById("parents_la").style.width = plus.screen.resolutionWidth * 0.8 + 'px';
+					document.getElementById("teacher_la").style.width = plus.screen.resolutionWidth * 0.8 + 'px';
+					document.getElementById("student_la").style.width = plus.screen.resolutionWidth * 0.8 + 'px';
 				} else {
 					link.href = "../../css/mine/manager_data.css";
 					document.getElementById("title").innerText = '人员资料';
@@ -147,7 +154,7 @@
 				var screenHeight = plus.screen.resolutionHeight;
 				//console.log('screenHeight ' + screenHeight);
 				botHeight = screenHeight * 1 - (plus.navigator.getStatusbarHeight() + 45 + 38);
-				console.log('botHeight ' + botHeight);
+				console.log('botHeight ' + botHeight + '|' + plus.screen.resolutionWidth * 0.8);
 
 				getCGQun();
 
@@ -271,6 +278,9 @@
 					var element = document.getElementById('qun_top_' + id);
 					inviteOrCreate = JSON.parse(element.getAttribute('data-info'));
 					console.log('邀请群成员 ' + JSON.stringify(inviteOrCreate));
+					document.getElementById("parents_la").innerText = '邀请[家长]进入[' + inviteOrCreate.gname + ']';
+					document.getElementById("teacher_la").innerText = '邀请[老师]进入[' + inviteOrCreate.gname + ']';
+					document.getElementById("student_la").innerText = '邀请[学生]进入[' + inviteOrCreate.gname + ']';
 					mui('#popover').popover('toggle');
 				});
 
@@ -303,74 +313,80 @@
 
 				//点击资料
 				mui('#slider_group').on('tap', '.mui-table-view-cell', function() {
-					console.log(this.getAttribute('data-info'));
-					var passData = JSON.parse(this.getAttribute('data-info'));
-					passData.gname = mainData.gname; //群名称
-					switch(passData.mstype) { //0家长,1管理员,2老师,3学生
-						case 0:
-							passData.type = 'parents'; //资料类型
-							break;
-						case 1:
-							passData.type = 'teacher'; //资料类型
-							break;
-						case 2:
-							passData.type = 'teacher'; //资料类型
-							break;
-						case 3:
-							passData.type = 'student'; //资料类型
-							break;
-						default:
-							console.log('资料类型选择出错');
-							break;
+					//是否是人员资料
+					if(mainData.type == 1) {
+						console.log(this.getAttribute('data-info'));
+						var passData = JSON.parse(this.getAttribute('data-info'));
+						passData.gname = mainData.gname; //群名称
+						switch(passData.mstype) { //0家长,1管理员,2老师,3学生
+							case 0:
+								passData.type = 'parents'; //资料类型
+								break;
+							case 1:
+								passData.type = 'teacher'; //资料类型
+								break;
+							case 2:
+								passData.type = 'teacher'; //资料类型
+								break;
+							case 3:
+								passData.type = 'student'; //资料类型
+								break;
+							default:
+								console.log('资料类型选择出错');
+								break;
+						}
+						passData.mstype = 1; //管理员
+						events.openNewWindowWithData('qun_data_details.html', passData);
 					}
-					passData.mstype = 1; //管理员
-					events.openNewWindowWithData('qun_data_details.html', passData);
 				});
 
 				//长按资料
 				mui('#slider_group').on('longtap', '.mui-table-view-cell', function() {
-					console.log(this.id + '|' + this.getAttribute('data-info'));
-					var id = this.id;
-					var passData = JSON.parse(this.getAttribute('data-info'));
+					//是否是人员资料
+					if(mainData.type == 1) {
+						console.log(this.id + '|' + this.getAttribute('data-info'));
+						var id = this.id;
+						var passData = JSON.parse(this.getAttribute('data-info'));
 
-					var btnArray = ['否', '是'];
-					var title = '';
-					if(passData.mstype == 1 || passData.mstype == 2) {
-						title = '您确定要删除吗？';
-					} else {
-						title = '您确定要删除吗？删除后记事将被清空哦';
-					}
-					mui.confirm(title, '删除资料', btnArray, function(e) {
-						if(e.index == 1) {
-							if(passData.mstype == 1 || passData.mstype == 2) {
-								//33.根据资料表ID删除资料
-								deleteData(passData.stuid, id);
-							} else {
-								var wd = events.showWaiting();
-								//先删除家校圈的点到记事记录，再删除资料
-								//75.（点到记事）删除某学生点到记事
-								//所需参数
-								var comData = {
-									studentId: passData.stuid, //学生ID
-									classId: passData.gid //班级ID
-								};
-								postDataPro_delNoteByStudent(comData, wd, function(data) {
-									console.log('delNoteByStudent:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-									if(data.RspCode == 0) {
-										mui.toast('删除记事成功,正在删除资料...');
-										//33.根据资料表ID删除资料
-										deleteData(passData.stuid, id);
-									} else {
-										mui.toast('删除记事失败：' + data.RspTxt);
-									}
-									wd.close();
-								});
-							}
-
+						var btnArray = ['否', '是'];
+						var title = '';
+						if(passData.mstype == 1 || passData.mstype == 2) {
+							title = '您确定要删除吗？';
 						} else {
-							console.log('不删除资料');
+							title = '您确定要删除吗？删除后记事将被清空哦';
 						}
-					});
+						mui.confirm(title, '删除资料', btnArray, function(e) {
+							if(e.index == 1) {
+								if(passData.mstype == 1 || passData.mstype == 2) {
+									//33.根据资料表ID删除资料
+									deleteData(passData.stuid, id);
+								} else {
+									var wd = events.showWaiting();
+									//先删除家校圈的点到记事记录，再删除资料
+									//75.（点到记事）删除某学生点到记事
+									//所需参数
+									var comData = {
+										studentId: passData.stuid, //学生ID
+										classId: passData.gid //班级ID
+									};
+									postDataPro_delNoteByStudent(comData, wd, function(data) {
+										console.log('delNoteByStudent:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+										if(data.RspCode == 0) {
+											mui.toast('删除记事成功,正在删除资料...');
+											//33.根据资料表ID删除资料
+											deleteData(passData.stuid, id);
+										} else {
+											mui.toast('删除记事失败：' + data.RspTxt);
+										}
+										wd.close();
+									});
+								}
+
+							} else {
+								console.log('不删除资料');
+							}
+						});
+					}
 				});
 
 				//创建资料
