--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -124,12 +124,10 @@
 					if(data.RspCode == 0) {
 						mui.toast('提交作业答案成功！')
 //						mui.fire(plus.webview.currentWebview().opener(), 'workSubmitted');
-						events.fireToPageWithData('homework-commented.html','workDetail',{HomeworkResultId:data.RspData.HomeworkResultId,workType:1})
+						events.fireToPageWithData('homework-commented.html','workDetail',jQuery.extend({},homeworkModel,{HomeworkResultId:data.RspData.HomeworkResultId,workType:1}));
 						//清空输入框
 						textView.value = '';
 						textView.blur();
-//						mui.back();
-
 					} else {
 						mui.toast(data.RspTxt);
 					}
