--- a/JiaoBaoYun-hb/html/mine/about.html
+++ b/JiaoBaoYun-hb/html/mine/about.html
@@ -10,9 +10,7 @@
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
-		<style type="text/css">
-			
-		</style>
+		<style type="text/css"></style>
 	</head>
 
 	<body>
@@ -51,22 +49,22 @@
   提供科教新闻栏目，实时掌握教育新闻等知识传递。求知问答专家在线，有问必答。提供在线辅导，金牌专家为您在线服务。学生作业在提交，且答案拍照上传在线比对答案，方便快捷！</p>-->
 
 		</div>
-		<script type="text/javascript">
-			plus.runtime.getProperty(plus.runtime.appid, function(inf) {
-				console.log("当前应用版本：" + inf.version);
-				document.getElementById("version").innerHTML = '教宝云'+inf.version
-			})
-			
-			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
-				if(this.id=='li0'){
-					events.openNewWindow('function.html')
-				}else if(this.id=='li1'){
-					
-				}else{
-					
-				}
-			})
-		</script>
+		<script type="text/javascript">mui.ready(function() {
+	plus.runtime.getProperty(plus.runtime.appid, function(inf) {
+		console.log("当前应用版本：" + inf.version);
+		document.getElementById("version").innerHTML = '教宝云' + inf.version
+	})
+
+	mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
+		if(this.id == 'li0') {
+			events.openNewWindow('function.html')
+		} else if(this.id == 'li1') {
+
+		} else {
+
+		}
+	})
+})</script>
 	</body>
 
 </html>
