--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -123,7 +123,7 @@
 	</head>
 
 	<body>
-		<div id="refreshContainer" class="mui-content mui-scroll-wrapper" style="visibility: hidden;">
+		<div id="refreshContainer" class="mui-content mui-scroll-wrapper" style="visibility: ;">
 			<div class="mui-scroll">
 				<!--存储-->
 				<div id="cloudstorage" class="cloud-item">
@@ -131,12 +131,13 @@
 						存<br/>储
 					</div>
 					<div class="cloud-item-right">
-						<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+						<div id="cloudstorage_0_sw" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 							<div id="cloudstorage_0" class="mui-scroll">
 							</div>
 						</div>
-						<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-							<div id="cloudstorage_1" class="mui-scroll"></div>
+						<div id="cloudstorage_1_sw" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+							<div id="cloudstorage_1" class="mui-scroll">
+							</div>
 						</div>
 					</div>
 				</div>
@@ -146,10 +147,10 @@
 						家<br />校<br />互<br />动
 					</div>
 					<div class="cloud-item-right">
-						<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+						<div id="cloudrecord_0_sw" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 							<div id="cloudrecord_0" class="mui-scroll"></div>
 						</div>
-						<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+						<div id="cloudrecord_1_sw" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 							<div id="cloudrecord_1" class="mui-scroll"></div>
 						</div>
 					</div>
@@ -271,21 +272,6 @@
 
 				//重新登录或者自动登录后获取的信息
 				window.addEventListener('infoChanged', function() {
-					mui(".mui-scroll-wrapper").scroll({
-						scrollY: true, //是否竖向滚动
-						scrollX: false, //是否横向滚动
-						startX: 0, //初始化时滚动至x
-						startY: 0, //初始化时滚动至y
-						indicators: true, //是否显示滚动条
-						deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
-						bounce: true //是否启用回弹
-					});
-					//文件存储数组
-					fileArray = [];
-					//获取所有的群
-					datasource = [];
-					//获取学生列表
-					topStudentArr = [];
 					changeData();
 					events.fireToPageNone('storage_upload.html', 'createFolder'); //在程序中创建utid的文件夹和对应的上传下载文件夹
 				});
@@ -304,11 +290,30 @@
 					changeCloudData();
 				});
 
+				//创建群的监听
 				window.addEventListener('getGroupList', function() {
 					//获取所有的群
 					datasource = [];
 					//获取班级
 					getGroupList();
+				});
+
+				//退出登录后，清理云盘主页界面和数据
+				window.addEventListener('cleanCloudHome', function() {
+					//文件存储数组
+					fileArray = [];
+					//获取所有的群
+					datasource = [];
+					//获取学生列表
+					topStudentArr = [];
+					//清理界面
+					var id = ['cloudstorage_0', 'cloudstorage_1', 'cloudrecord_0', 'cloudrecord_1'];
+					for(var i = 0; i < id.length; i++) {
+						var element = document.getElementById(id[i]);
+						element.innerHTML = '';
+						var scroll = mui('#' + id[i] + '_sw').scroll();
+						scroll.scrollTo(0, 0, 100); //100毫秒滚动到顶
+					}
 				});
 
 				//-----------设置数据end-----------------
