--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -12,7 +12,7 @@
 	<body>
 		<header id="header" class="mui-bar mui-bar-nav">
 			<a id='back' class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="display: none;"></a>
-			<h1 id="navTitle" class="mui-title"  style="color: white;">修改密码</h1>
+			<h1 id="navTitle" class="mui-title" style="color: white;">修改密码</h1>
 			<h1 class="mui-icon mui-icon-right-nav mui-pull-right" id="cancelBtn" style="text-align: right;right: 10px;font-size: 15px;">取消</h1>
 		</header>
 		<div class="mui-content">
@@ -100,7 +100,7 @@
 					console.log('333333');
 					clearData();
 				});
-				
+
 				//从验证码界面登录或者注册时
 				window.addEventListener('registerPW', function() {
 					back.style.display = 'none';
@@ -192,8 +192,8 @@
 								shaketype: 'repw', //注册(reg),登录(login),修改密码(repw)
 								appid: plus.runtime.appid,
 								token: personalToken
-									//								vtp:'',//np(新建密码),rp(修改密码)
-									//								vvl://
+								//								vtp:'',//np(新建密码),rp(修改密码)
+								//								vvl://
 							};
 							//发送网络请求，data为网络返回值
 							if(tempFlag == 0 || tempFlag == 2 || tempFlag == 3) {
@@ -211,9 +211,9 @@
 									if(data.RspCode == 0) {
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.unick = unickName.value;
-										if(!tempInfo.uimg){
-										tempInfo.uimg = '../../image/utils/default_personalimage.png';
-									}
+										if(!tempInfo.uimg) {
+											tempInfo.uimg = '../../image/utils/default_personalimage.png';
+										}
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 									}
 								});
@@ -236,23 +236,25 @@
 									unickName0.value = '';
 									password0.value = '';
 									password1.value = '';
-									if(tempFlag == 0||tempFlag == 2) {//2为注册后设置密码
+									if(tempFlag == 0 || tempFlag == 2) { //2为注册后设置密码
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.ispw = '1';
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
-//										mui.toast('修改密码成功');
+										//										mui.toast('修改密码成功');
 										events.infoChanged();
 										events.openNewWindowWithData('../index/index.html', '');
-									} else if(tempFlag == 1) {//在设置里，修改密码
+									} else if(tempFlag == 1) { //在设置里，修改密码
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.ispw = '1';
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 										mui.toast('修改密码成功');
-//										setTimeout(function(){mui.back();},2000);
+										//										setTimeout(function(){mui.back();},2000);
 										mui.back();
-									} else if(tempFlag == 3) {//在设置里，退出时设置密码
+									} else if(tempFlag == 3) { //在设置里，退出时设置密码
 										//修改自动登录值
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
+										//退出登录
+										events.logOff();
 										//跳转到登录界面
 										events.openNewWindowWithData('../../html/register/login.html', '');
 									}
