--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -482,7 +482,7 @@
 							console.log('index=' + index)
 							var a = document.getElementById("praise" + index);
 							a.style.color = 'rgb(0, 165, 224)'
-//							mui.toast('点赞成功');
+							//							mui.toast('点赞成功');
 							var PraiseList = document.getElementById("PraiseList" + index);
 							console.log(PraiseList.innerHTML);
 							var praiseNameList = PraiseList.getElementsByTagName("font");
@@ -514,7 +514,7 @@
 						if(data.RspCode == 0) {
 							var a = document.getElementById("praise" + index);
 							a.style.color = 'rgb(143, 143, 148)'
-//							mui.toast('取消点赞成功');
+							//							mui.toast('取消点赞成功');
 							var PraiseList = document.getElementById("PraiseList" + index);
 							var praiseName = PraiseList.getElementsByTagName("font")[0];
 							if(praiseName.innerHTML.indexOf('、') > -1) {
@@ -552,44 +552,45 @@
 
 		});
 		var addReplyView = function() {
-				//			评论
-				mui('.mui-table-view').on('tap', '.dynamic-icon-comment', function() {
-					//				click.push('评论');
-					tempIndex = this.id.replace('comment', '');
-					console.log('tempIndex====' + tempIndex)
-					var replyContainer = document.getElementById('footer');
-					document.getElementById('footer').className = 'mui-bar-tab';
-					replyContainer.style.display = 'block';
-					showSoftInput('#msg-content');
-					window.event.stopPropagation()
+			//			评论
+			mui('.mui-table-view').on('tap', '.dynamic-icon-comment', function() {
+				//				click.push('评论');
+				tempIndex = this.id.replace('comment', '');
+				console.log('tempIndex====' + tempIndex)
+				var replyContainer = document.getElementById('footer');
+				document.getElementById('footer').className = 'mui-bar-tab';
+				replyContainer.style.display = 'block';
+				showSoftInput('#msg-content');
+				window.event.stopPropagation()
 
-				});
-				//底部评论按钮
-				mui('.mui-table-view').on('tap', '.dynamic-comment-btn', function() {
-					tempIndex = this.id.replace('bottomComment', '');
-					console.log('tap====' + tempIndex)
-					var replyContainer = document.getElementById('footer');
-					document.getElementById('footer').className = 'mui-bar-tab';
-					replyContainer.style.display = 'block';
-					showSoftInput('#msg-content');
-					window.event.stopPropagation()
-				});
+			});
+			//底部评论按钮
+			mui('.mui-table-view').on('tap', '.dynamic-comment-btn', function() {
+				tempIndex = this.id.replace('bottomComment', '');
+				console.log('tap====' + tempIndex)
+				var replyContainer = document.getElementById('footer');
+				document.getElementById('footer').className = 'mui-bar-tab';
+				replyContainer.style.display = 'block';
+				showSoftInput('#msg-content');
+				window.event.stopPropagation()
+			});
 
-				//			回复评论
-				mui('.mui-table-view').on('tap', '.replyComment', function() {
+			//			回复评论
+			mui('.mui-table-view').on('tap', '.replyComment', function() {
 
-					tempIndex = this.id.replace('replyComment', '');
-					console.log('tempIndex====' + tempIndex)
-					var replyContainer = document.getElementById('footer');
-					document.getElementById('footer').className = 'mui-bar-tab';
-					replyContainer.style.display = 'block';
-					showSoftInput('#msg-content');
-					window.event.stopPropagation()
+				tempIndex = this.id.replace('replyComment', '');
+				console.log('tempIndex====' + tempIndex)
+				var replyContainer = document.getElementById('footer');
+				document.getElementById('footer').className = 'mui-bar-tab';
+				replyContainer.style.display = 'block';
+				showSoftInput('#msg-content');
+				window.event.stopPropagation()
 
-				});
+			});
 
-			}
-			//加载数据
+		}
+
+		//加载数据
 		function addData(index) {
 			//[[InfoList],[ImageList],[InteractionList]]动态的信息
 			var Data = [];
@@ -602,12 +603,7 @@
 			//判断img是否为null，或者空
 			var tempModel = zonepArray[index];
 			tempModel.uimg = updateHeadImg(tempModel.uimg)
-				//			if(tempModel.uimg == '' || tempModel.uimg == null) { //赋值
-				//				tempModel.uimg = '../../image/utils/default_personalimage.png';
-				//			} else { //修改值
-				//				var myDate = new Date();
-				//				tempModel.uimg = tempModel.uimg + '?' + myDate.getTime();
-				//			}
+
 			var personalImage = tempModel.uimg;
 			var personalName = tempModel.unick;
 			var time = tempModel.PublishDate;
@@ -616,23 +612,17 @@
 			InfoList.push(personalName);
 			InfoList.push(time);
 			InfoList.push(contentText);
+			if(tempModel.EncImgAddr != '') {
+					var EncImgAddrs = tempModel.EncImgAddr.split('|');
+					//内容的图片
+					for(var i = 0; i < EncImgAddrs.length; i++) {
+						ImageList.push(EncImgAddrs[i])
+					}
+				}
 
-			//内容的图片
-			//[[ImageUrlList],ImageNum],动态内容的图片路径数组,图片总数量
-			var ImageUrlList = [];
-			//					if(id == 0) {
-			//						ImageUrlList = ['../../image/dynamic/u101.png', '../../image/dynamic/u101.png', '../../image/dynamic/u101.png',
-			//							'../../image/dynamic/u101.png', '../../image/dynamic/u101.png', '../../image/dynamic/u101.png',
-			//							'../../image/dynamic/u101.png', '../../image/dynamic/u101.png', '../../image/dynamic/u101.png', '../../image/dynamic/u101.png'
-			//						];
-			//					} 
-			var ImageNum = ImageUrlList.length;
-			ImageList.push(ImageUrlList);
-			ImageList.push(ImageNum);
-
-			//底部
-			//[introduce，viewCount，[praiseList],[commentList]]信息说明，浏览次数，点赞列表数组，评论列表数组
-			var introduce = '上传了' + ImageNum + '张图片到相册《手机相册》';
+				//底部
+				//[introduce，viewCount，[praiseList],[commentList]]信息说明，浏览次数，点赞列表数组，评论列表数组
+				var introduce = '上传了' + ImageList.length + '张图片到相册《手机相册》';
 			var viewCount = tempModel.ReadCnt;
 			var praiseList = [];
 			if(tempModel.LikeUsers.length != 0) {
@@ -770,28 +760,28 @@
 			}
 
 			var NoReadCnt = plus.webview.currentWebview().data.NoReadCnt //未读条数
-//			if(NoReadCnt != 0) { //如果未读条数不为0，则设置空间状态为已读
-				var comData = {
-					userId: personalUTID, //用户ID
-					publisherId: publisherId
-				};
+			//			if(NoReadCnt != 0) { //如果未读条数不为0，则设置空间状态为已读
+			var comData = {
+				userId: personalUTID, //用户ID
+				publisherId: publisherId
+			};
 
-				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-				postDataPro_setUserSpaceReadByUser(comData, wd, function(data) {
-					wd.close();
-					console.log('设置空间状态为已读_setUserSpaceReadByUser' + JSON.stringify(data));
-					if(data.RspCode == 0) {
-						//获得主页面的webview
-						var main = plus.webview.getWebviewById('../quan/tab-zone.html');
-						//触发tab-zone页面的setRead事件
-						mui.fire(main, 'setRead', {
-							flag: 3
-						});
+			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			postDataPro_setUserSpaceReadByUser(comData, wd, function(data) {
+				wd.close();
+				console.log('设置空间状态为已读_setUserSpaceReadByUser' + JSON.stringify(data));
+				if(data.RspCode == 0) {
+					//获得主页面的webview
+					var main = plus.webview.getWebviewById('../quan/tab-zone.html');
+					//触发tab-zone页面的setRead事件
+					mui.fire(main, 'setRead', {
+						flag: 3
+					});
 
-					}
+				}
 
-				})
-//			}
+			})
+			//			}
 		}
 		/**
 		 * 下拉刷新具体业务实现
