--- a/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
@@ -59,7 +59,7 @@
 
 		mui.plusReady(function() {
 			//显示等待窗口
-			plus.nativeUI.showWaiting('正在加载中');
+			var wd = events.showWaiting();
 			//---获取数据并传递数据---start---
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
 			var data = main.data; //接收A页面传入参数值
@@ -89,7 +89,7 @@
 				//触发tab-zone页面的setRead事件
 				mui.fire(cloud_home, 'stuImgeChanged', {
 					id: data.studentId,
-					img:successCB
+					img: successCB
 				});
 			}, function(errorCB) {
 				console.log('上传并修改资料头像，失败的回调' + JSON.stringify(errorCB));
